--- a/index.html
+++ b/index.html
@@ -908,10 +908,8 @@
     </div>
 </div>
 
-
 <script>
-        let correctAnswer1;
-
+    let correctAnswer1;
     function generateCaptcha1() {
         let a = Math.floor(Math.random() * 10) + 1;
         let b = Math.floor(Math.random() * 10) + 1;
@@ -941,10 +939,16 @@
             document.getElementById("error1").textContent = "Invalid username or password!";
         }
     }
+    // يجب استدعاء هذه الدالة عند فتح النافذة لمرة واحدة فقط
+    // إذا كنت تستخدم نافذتين في صفحة واحدة، فضع هذا الكود في الجزء الرئيسي من JavaScript
+    // document.addEventListener("DOMContentLoaded", generateCaptcha1);
+</script>
+
 
 
     
 </html>
+
 
 
 
