--- a/index.html
+++ b/index.html
@@ -942,12 +942,14 @@
     // يجب استدعاء هذه الدالة عند فتح النافذة لمرة واحدة فقط
     // إذا كنت تستخدم نافذتين في صفحة واحدة، فضع هذا الكود في الجزء الرئيسي من JavaScript
     // document.addEventListener("DOMContentLoaded", generateCaptcha1);
+    document.addEventListener("DOMContentLoaded", generateCaptcha1);
 </script>
 
 
 
     
 </html>
+
 
 
 
