--- a/judy.html
+++ b/judy.html
@@ -157,7 +157,7 @@ Bootstrap 5 HTML CSS Template
 <body>
     <script>
         // Define the correct username and password
-        const correctUsername = "smart_door_system";
+        const correctUsername = "judy";
         const correctPassword = "1037";
 
         function showLoginPrompt() {
@@ -453,6 +453,7 @@ Bootstrap 5 HTML CSS Template
   </script>
 </body>
 </html>
+
 
 
 
