--- a/companies.html
+++ b/companies.html
@@ -455,7 +455,7 @@ button:hover:after {
                <div class="container">
   
   <div class="button-group">
-    <button class="button"><a href=control.html>Company 1</a></button>
+    <button class="button"><a href=judy.html>Company 1</a></button>
     <button class="button"><a href=control.html>Company 2</a></button>
     <button class="button"><a href=control.html>Company 3</a></button>
     <button class="button"><a href=control.html>Company 4</a></button>
@@ -562,6 +562,7 @@ button:hover:after {
         </script>
     </body>
 </html>
+
 
 
 
