--- a/companies-job.html
+++ b/companies-job.html
@@ -396,19 +396,19 @@ button:hover:after {
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav ms-lg-auto">
                                 <li class="nav-item">
-                                    <a class="nav-link click-scroll" href="#section_1">Home</a>
+                                    <a class="nav-link click-scroll" href="index.html/#section_1">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link click-scroll" href="#section_2">Our Story</a>
+                                    <a class="nav-link click-scroll" href="index.html/#section_2">Our Story</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link click-scroll" href="#section_3">Components</a>
+                                    <a class="nav-link click-scroll" href="index.html/#section_3">Components</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link click-scroll" href="#section_4">Previous Versions</a>
+                                    <a class="nav-link click-scroll" href="index.html/#section_4">Previous Versions</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link click-scroll" href="#section_5">Contact</a>
+                                    <a class="nav-link click-scroll" href="index.html/#section_5">Contact</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link click-scroll" href="download.html">App</a>
@@ -562,6 +562,7 @@ button:hover:after {
         </script>
     </body>
 </html>
+
 
 
 
