--- a/companies.control.html
+++ b/companies.control.html
@@ -455,10 +455,10 @@ button:hover:after {
                <div class="container">
   
   <div class="button-group">
-    <button class="button"><a href=Judy.Food.Industries.Company-control.html>Company 1</a></button>
-    <button class="button"><a href=Public.Services.Company-Tripoli-control.html>Company 2</a></button>
-    <button class="button"><a href=College.of.Electronic.Technology-Tripoli-control.html>Company 3</a></button>
-    <button class="button"><a href=Fittnesstime.ly-control.html>Company 4</a></button>
+    <button class="button"><a href=companies.control/Judy.Food.Industries.Company-control.html>Company 1</a></button>
+    <button class="button"><a href=companies.control/Public.Services.Company-Tripoli-control.html>Company 2</a></button>
+    <button class="button"><a href=companies.control/College.of.Electronic.Technology-Tripoli-control.html>Company 3</a></button>
+    <button class="button"><a href=companies.control/Fittnesstime.ly-control.html>Company 4</a></button>
 
   </div>
  </div>
@@ -562,6 +562,7 @@ button:hover:after {
         </script>
     </body>
 </html>
+
 
 
 
