--- a/companies.job/College.of.Electronic.Technology-Tripoli-job.html
+++ b/companies.job/College.of.Electronic.Technology-Tripoli-job.html
@@ -272,8 +272,8 @@
 
     <script>
         // Define the correct username and password
-        const correctUsername = "services";
-        const correctPassword = "2222";
+        const correctUsername = "cet";
+        const correctPassword = "1037";
 
         function showLoginPrompt() {
             let username = prompt("Please enter the username:");
@@ -472,6 +472,7 @@
 
     </body>
 </html>
+
 
 
 
