--- a/index.html
+++ b/index.html
@@ -863,7 +863,7 @@
         }
 
         if (user === "smart_door_system" && pass === "1037") {
-            window.location.href = "companies.html";  
+            window.location.href = "companies.control.html";  
         } else {
             document.getElementById("error").textContent = "Invalid username or password!";
         }
@@ -949,6 +949,7 @@
 
     
 </html>
+
 
 
 
