--- a/companies.job/Judy.Food.Industries.Company-job.html
+++ b/companies.job/Judy.Food.Industries.Company-job.html
@@ -16,13 +16,13 @@
 
         <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,400;0,600;0,700;1,200;1,700&display=swap" rel="stylesheet">
              
-        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="/css/bootstrap.min.css" rel="stylesheet">
 
-        <link href="css/bootstrap-icons.css" rel="stylesheet">
+        <link href="/css/bootstrap-icons.css" rel="stylesheet">
 
-        <link href="css/vegas.min.css" rel="stylesheet">
+        <link href="/css/vegas.min.css" rel="stylesheet">
 
-        <link href="css/tooplate-barista.css" rel="stylesheet">
+        <link href="/css/tooplate-barista.css" rel="stylesheet">
            
         <style>
             /* Custom Colors */
@@ -461,11 +461,11 @@
 
 
         <!-- JAVASCRIPT FILES -->
-        <script src="js/jquery.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/jquery.sticky.js"></script>
-        <script src="js/vegas.min.js"></script>
-        <script src="js/custom.js"></script>
+        <script src="/js/jquery.min.js"></script>
+        <script src="/js/bootstrap.min.js"></script>
+        <script src="/js/jquery.sticky.js"></script>
+        <script src="/js/vegas.min.js"></script>
+        <script src="/js/custom.js"></script>
 
     </body>
 </html>
