--- a/companies-job.html
+++ b/companies-job.html
@@ -456,7 +456,7 @@ button:hover:after {
   
   <div class="button-group">
     <button class="button"><a href=companies.job/Judy.Food.Industries.Company-job.html>Company 1</a></button>
-    <button class="button"><a href=companies.job/Public.Services.Company-Tripoli-job>Company 2</a></button>
+    <button class="button"><a href=Public.Services.Company-Tripoli-job>Company 2</a></button>
     <button class="button"><a href=companies.job/College.of.Electronic.Technology-Tripoli-job>Company 3</a></button>
     <button class="button"><a href=companies.job/Fittnesstime.ly-job>Company 4</a></button>
 
@@ -562,6 +562,7 @@ button:hover:after {
         </script>
     </body>
 </html>
+
 
 
 
