--- a/Judy.Food.Industries.Company-job.html
+++ b/Judy.Food.Industries.Company-job.html
@@ -272,7 +272,7 @@
 
     <script>
         // Define the correct username and password
-        const correctUsername = "services";
+        const correctUsername = "judy";
         const correctPassword = "1037";
 
         function showLoginPrompt() {
