--- a/Judy.Food.Industries.Company-control.html
+++ b/Judy.Food.Industries.Company-control.html
@@ -192,7 +192,7 @@ Bootstrap 5 HTML CSS Template
       <div class="col-lg-5 col-12 p-0">
                                         <div class="booking-form-image-wrap">
                                             
-                                            <img src="images/reviews/JudyFoodIndustriesCompany.jpg" class="booking-form-image img-fluid mx-auto d-block" alt="">
+                                            <img src="images/companies.pics/JudyFoodIndustriesCompany.jpg" class="booking-form-image img-fluid mx-auto d-block" alt="">
                                         </div>
 
                             
@@ -453,6 +453,7 @@ Bootstrap 5 HTML CSS Template
   </script>
 </body>
 </html>
+
 
 
 
