--- a/College.of.Electronic.Technology-Tripoli-control.html
+++ b/College.of.Electronic.Technology-Tripoli-control.html
@@ -213,7 +213,7 @@ Bootstrap 5 HTML CSS Template
                                             
                                             <img src="images/companies.pics/College of Electronic Technology - Tripoli.jpg" class="booking-form-image img-fluid mx-auto d-block" alt="">
                                         </div>
-
+<div class="container text-center">
                             
     <!-- ========== OPTIONS ========== -->
     <div class="card control-card">
@@ -362,6 +362,7 @@ Bootstrap 5 HTML CSS Template
          <li class="list-group-item"><a href="downloads/FaceRecognition Explanation.txt" download>Face Recognition</a></li>
         </ul>
       </div>
+    </div>
                      </div>
                     </div>
                 </section>
@@ -472,6 +473,7 @@ Bootstrap 5 HTML CSS Template
   </script>
 </body>
 </html>
+
 
 
 
