--- a/cccc.html
+++ b/cccc.html
@@ -16,7 +16,7 @@
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Inter, Arial, sans-serif;
       transition: all 0.3s ease-in-out;
     }
-    #mainContent { display: none; } /* حماية: الصفحة مخفية لين تسجيل الدخول */
+    #mainContent { display: none; } /* نخفي المحتوى لين يدخل */
     h1 {
       text-align: center;
       font-weight: 800;
@@ -50,73 +50,64 @@
 </head>
 <body>
 
-<!-- محتوى الصفحة كله -->
+<!-- ===== محتوى الصفحة ===== -->
 <div id="mainContent">
-
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg">
-  <div class="container">
-    <a class="navbar-brand d-flex align-items-center me-3 text-white fw-bold" href="index.html">
-      <img src="images/smart door system.png" class="navbar-brand-image img-fluid me-2" alt="Logo" style="height:40px;">
-      Smart Door System
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-lg-auto">
-        <li class="nav-item"><a class="nav-link" href="#section_1">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="#section_2">Our Story</a></li>
-        <li class="nav-item"><a class="nav-link" href="#section_3">Components</a></li>
-        <li class="nav-item"><a class="nav-link" href="#section_4">Previous Versions</a></li>
-        <li class="nav-item"><a class="nav-link" href="#section_5">Contact</a></li>
-        <li class="nav-item"><a class="nav-link" href="download.html">App</a></li>
-        <li class="nav-item">
-          <button id="themeToggle" class="btn btn-sm btn-light ms-3">🌙 Dark Mode</button>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-<div class="container py-4 text-center">
-  <h1>College of Electronic Technology Tripoli - Control Page</h1>
-  <img src="images/companies.pics/College of Electronic Technology - Tripoli.jpg" class="img-fluid mx-auto d-block mb-4" alt="">
-</div>
-
-<!-- ===== باقي الكروت (Door, Camera, System, Penalty, Livestream, Add-ons, Explanation) زي النسخة السابقة ===== -->
-<!-- (هنا نفس الكود اللي عطيتك قبل بالضبط، ما تغيرش) -->
-
-<!-- Footer -->
-<footer class="site-footer bg-dark text-white mt-5 py-4">
-  <div class="container">
-    <div class="row">
-
-      <div class="col-lg-4 col-12 me-auto mb-3">
-        <em class="d-block mb-2">Where to find us?</em>
-        <strong>
-          <i class="bi-geo-alt me-2"></i>
-          College Of Electronic Technology, Al Jraba Street, Tripoli, Libya
-        </strong>
-        <ul class="social-icon list-unstyled d-flex mt-3">
-          <li class="me-3"><a href="https://www.facebook.com/share/167Fq9bmrP/" target="_blank" class="text-white fs-4"><i class="bi-facebook"></i></a></li>
-          <li><a href="https://t.me/smart_door_system" target="_blank" class="text-white fs-4"><i class="bi-telegram"></i></a></li>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg">
+    <div class="container">
+      <a class="navbar-brand d-flex align-items-center me-3 text-white fw-bold" href="index.html">
+        <img src="images/smart door system.png" class="navbar-brand-image img-fluid me-2" alt="Logo" style="height:40px;">
+        Smart Door System
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-lg-auto">
+          <li class="nav-item"><a class="nav-link" href="#section_1">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#section_2">Our Story</a></li>
+          <li class="nav-item"><a class="nav-link" href="#section_3">Components</a></li>
+          <li class="nav-item"><a class="nav-link" href="#section_4">Previous Versions</a></li>
+          <li class="nav-item"><a class="nav-link" href="#section_5">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="download.html">App</a></li>
+          <li class="nav-item">
+            <button id="themeToggle" class="btn btn-sm btn-light ms-3">🌙 Dark Mode</button>
+          </li>
         </ul>
       </div>
+    </div>
+  </nav>
 
-      <div class="col-lg-3 col-12 mb-3">
-        <em class="d-block mb-2">Contact Us</em>
-        <p><strong>Email:</strong> <a href="mailto:smart.door.system.project@gmail.com" class="text-white">smart.door.system.project@gmail.com</a></p>
-      </div>
+  <div class="container py-4 text-center">
+    <h1>College of Electronic Technology Tripoli - Control Page</h1>
+    <img src="images/companies.pics/College of Electronic Technology - Tripoli.jpg" class="img-fluid mx-auto d-block mb-4" alt="">
+  </div>
 
-      <div class="col-lg-8 col-12">
-        <p class="mb-0">© Smart Door System - Python Project 2025</p>
+  <!-- هنا باقي الكروت (Door, Camera, System, Penalty, Livestream, Add-ons, Explanation) -->
+
+  <!-- Footer -->
+  <footer class="site-footer bg-dark text-white mt-5 py-4">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 col-12 me-auto mb-3">
+          <em class="d-block mb-2">Where to find us?</em>
+          <strong><i class="bi-geo-alt me-2"></i> College Of Electronic Technology, Al Jraba Street, Tripoli, Libya</strong>
+          <ul class="social-icon list-unstyled d-flex mt-3">
+            <li class="me-3"><a href="https://www.facebook.com/share/167Fq9bmrP/" target="_blank" class="text-white fs-4"><i class="bi-facebook"></i></a></li>
+            <li><a href="https://t.me/smart_door_system" target="_blank" class="text-white fs-4"><i class="bi-telegram"></i></a></li>
+          </ul>
+        </div>
+        <div class="col-lg-3 col-12 mb-3">
+          <em class="d-block mb-2">Contact Us</em>
+          <p><strong>Email:</strong> <a href="mailto:smart.door.system.project@gmail.com" class="text-white">smart.door.system.project@gmail.com</a></p>
+        </div>
+        <div class="col-lg-8 col-12">
+          <p class="mb-0">© Smart Door System - Python Project 2025</p>
+        </div>
       </div>
     </div>
-  </div>
-</footer>
-
-</div><!-- /mainContent -->
+  </footer>
+</div>
 
 <!-- Login Modal -->
 <div class="modal fade" id="loginModal" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false">
@@ -134,15 +125,34 @@
   </div>
 </div>
 
+<!-- Toast -->
+<div class="position-fixed bottom-0 end-0 p-3" style="z-index: 9999">
+  <div id="toastMessage" class="toast align-items-center text-bg-success border-0" role="alert">
+    <div class="d-flex">
+      <div class="toast-body">✅ Command Sent!</div>
+      <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
+    </div>
+  </div>
+</div>
+
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 <script type="module">
-  // Firebase (نفس الإعدادات متاعك)
   import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
   import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
 
-  const firebaseConfig = { /* نفس config اللي عندك */ };
+  const firebaseConfig = {
+    apiKey: "AIzaSyACQ7ot2G6wvmNRM_hmmTDK8p7zMBQ1w2c",
+    authDomain: "smart-door-system-project.firebaseapp.com",
+    databaseURL: "https://smart-door-system-project-default-rtdb.firebaseio.com",
+    projectId: "smart-door-system-project",
+    storageBucket: "smart-door-system-project.firebasestorage.app",
+    messagingSenderId: "298920936811",
+    appId: "1:298920936811:web:033b6b7af47d93d52f382e",
+    measurementId: "G-HY1Y22VZJT"
+  };
+
   const app = initializeApp(firebaseConfig);
   const db = getDatabase(app);
 
@@ -161,10 +171,9 @@
   }
   window.sendCommand = sendCommand;
 
-  // ===== Login Logic (مخفي المحتوى لين يسجل الدخول) =====
+  // Login Logic
   const correctUsername = "cet";
   const correctPassword = "1037";
-
   function checkLogin() {
     let username = document.getElementById("username").value;
     let password = document.getElementById("password").value;
