--- a/cccc.html
+++ b/cccc.html
@@ -64,11 +64,11 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-lg-auto">
-          <li class="nav-item"><a class="nav-link" href="#section_1">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="#section_2">Our Story</a></li>
-          <li class="nav-item"><a class="nav-link" href="#section_3">Components</a></li>
-          <li class="nav-item"><a class="nav-link" href="#section_4">Previous Versions</a></li>
-          <li class="nav-item"><a class="nav-link" href="#section_5">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html#section_1">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html#section_2">Our Story</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html#section_3">Components</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html#section_4">Previous Versions</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html#section_5">Contact</a></li>
           <li class="nav-item"><a class="nav-link" href="download.html">App</a></li>
           <li class="nav-item">
             <button id="themeToggle" class="btn btn-sm btn-light ms-3">🌙 Dark Mode</button>
@@ -284,3 +284,4 @@
 </script>
 </body>
 </html>
+
