--- a/cccc.html
+++ b/cccc.html
@@ -61,16 +61,49 @@
     .chev { transition: transform .28s ease; }
     .chev.open { transform:rotate(90deg); }
     .sublist { padding:10px 20px; }
+    footer { background: rgba(0,51,102,0.9); color:#fff; margin-top:40px; padding:20px 0; }
+
+    /* Toast style */
+    .toast-container {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      z-index: 9999;
+    }
   </style>
 </head>
 <body>
 
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg" style="background: rgba(0,51,102,0.9);">
+  <div class="container">
+    <a class="navbar-brand d-flex align-items-center me-3 text-white fw-bold" href="index.html">
+      <img src="images/smart door system.png" alt="Logo" style="height:40px; margin-right:8px;">
+      Smart Door System
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-lg-auto">
+        <li class="nav-item"><a class="nav-link text-white" href="index.html#section_1">Home</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="index.html#section_2">Our Story</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="index.html#section_3">Components</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="index.html#section_4">Versions</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="index.html#section_5">Contact</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="download.html">App</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<!-- Main Content -->
 <div class="wrap">
   <div class="main-card">
     <h2 class="brand-title">College of Electronic Technology Tripoli</h2>
     <img src="images/companies.pics/College of Electronic Technology - Tripoli.jpg" alt="College Logo" class="brand-img">
 
-    <!-- Master Menu -->
+    <!-- Smart Door System Options -->
     <div class="panel">
       <button class="btn-toggle" data-bs-toggle="collapse" data-bs-target="#mainMenu">
         <span><i class="bi bi-list"></i> Smart Door System Options</span>
@@ -129,8 +162,18 @@
           <i class="bi bi-chevron-right chev"></i>
         </button>
         <div id="streamMenu" class="collapse sublist">
-          <button class="list-item" onclick="sendCommand('start_stream')">Start Livestream</button>
-          <button class="list-item" onclick="sendCommand('stop_stream')">Stop Livestream</button>
+          <button class="list-item" onclick="startStream()">Start Livestream</button>
+          <button class="list-item" onclick="stopStream()">Stop Livestream</button>
+
+          <!-- Twitch Box -->
+          <div id="twitchBox" class="mt-3" style="display:none;">
+            <iframe
+              src="https://player.twitch.tv/?channel=YourTwitchUsername&parent=yourwebsite.com"
+              height="400"
+              width="100%"
+              allowfullscreen>
+            </iframe>
+          </div>
         </div>
       </div>
     </div>
@@ -177,7 +220,81 @@
   </div>
 </div>
 
+<!-- Footer -->
+<footer class="site-footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-4 col-12 me-auto mb-3">
+        <em class="d-block mb-2">Where to find us?</em>
+        <strong><i class="bi-geo-alt me-2"></i> College Of Electronic Technology, Al Jraba Street, Tripoli, Libya</strong>
+        <ul class="social-icon list-unstyled d-flex mt-3">
+          <li class="me-3"><a href="https://www.facebook.com/share/167Fq9bmrP/" target="_blank" class="text-white fs-4"><i class="bi-facebook"></i></a></li>
+          <li><a href="https://t.me/smart_door_system" target="_blank" class="text-white fs-4"><i class="bi-telegram"></i></a></li>
+        </ul>
+      </div>
+      <div class="col-lg-3 col-12 mb-3">
+        <em class="d-block mb-2">Contact Us</em>
+        <p><strong>Email:</strong> <a href="mailto:smart.door.system.project@gmail.com" class="text-white">smart.door.system.project@gmail.com</a></p>
+      </div>
+      <div class="col-lg-8 col-12">
+        <p class="mb-0">© Smart Door System - Python Project 2025</p>
+      </div>
+    </div>
+  </div>
+</footer>
+
+<!-- Toast container -->
+<div class="toast-container" id="toastContainer"></div>
+
+<!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- Firebase + Commands -->
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
+  import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
+
+  const firebaseConfig = {
+    apiKey: "AIzaSyACQ7ot2G6wvmNRM_hmmTDK8p7zMBQ1w2c",
+    authDomain: "smart-door-system-project.firebaseapp.com",
+    databaseURL: "https://smart-door-system-project-default-rtdb.firebaseio.com",
+    projectId: "smart-door-system-project",
+    storageBucket: "smart-door-system-project.firebasestorage.app",
+    messagingSenderId: "298920936811",
+    appId: "1:298920936811:web:033b6b7af47d93d52f382e",
+    measurementId: "G-HY1Y22VZJT"
+  };
+
+  const app = initializeApp(firebaseConfig);
+  const db = getDatabase(app);
+
+  function showToast(message) {
+    const container = document.getElementById('toastContainer');
+    const toastEl = document.createElement('div');
+    toastEl.className = 'toast align-items-center text-bg-primary border-0 show mb-2';
+    toastEl.role = 'alert';
+    toastEl.innerHTML = `<div class="d-flex"><div class="toast-body">${message}</div></div>`;
+    container.appendChild(toastEl);
+    setTimeout(()=>toastEl.remove(), 3000);
+  }
+
+  function sendCommand(command) {
+    set(ref(db, "commands/last"), { action: command, timestamp: Date.now() });
+    showToast("✅ Sent: " + command);
+  }
+  window.sendCommand = sendCommand;
+
+  // Livestream controls
+  window.startStream = function() {
+    sendCommand("start_stream");
+    document.getElementById("twitchBox").style.display = "block";
+  }
+  window.stopStream = function() {
+    sendCommand("stop_stream");
+    document.getElementById("twitchBox").style.display = "none";
+  }
+</script>
+
 <script>
   // Theme toggle
   const themeBtn = document.getElementById('themeToggle');
@@ -202,9 +319,6 @@
       target.addEventListener('hidden.bs.collapse', ()=> chev.classList.remove('open'));
     });
   });
-
-  // Dummy sendCommand
-  function sendCommand(cmd){ alert("Sent: " + cmd); }
 </script>
 </body>
 </html>
